open modules for JDK16+